# tapedrive

./: .codeclimate.yml  .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pyup.yml  .travis.yml  Dockerfile  Makefile  Pipfile  Procfile  README.md  docker-compose-separate-worker.yml  docker-compose.yml  gulpfile.js  manage.py  package-lock.json  package.json  prepare.sh  pyproject.toml  pytest.ini  requirements.txt  searchresults.json  setup.cfg  start-waiting.sh  start.sh  vite.config.js  webpack-stats.json  webpack-stats.json.example  webpack.config.js
.circleci/: config.yml
.github/workflows/: docker-build.yaml  docker.yaml  linters.yaml  tests.yaml
.testdata/: paged_p1.xml  paged_p2.xml  valid.xml
.tx/: config
__research_material/: overcast20171205.opml
assets/fonts/: fira-sans-condensed-v2-latin-300.eot  fira-sans-condensed-v2-latin-300italic.eot  fira-sans-condensed-v2-latin-700.eot  fira-sans-extra-condensed-v2-latin-300.eot  fira-sans-extra-condensed-v2-latin-300italic.eot  fira-sans-extra-condensed-v2-latin-700italic.eot
assets/js/: logic.js
assets/scss/: _dark-mode.scss  _fonts.scss  main.scss
assets/src/app/: main.js
assets/src/app/components/: ApplePodcastsSearch.vue  ApplePodcastsSearchItem.vue  ApplePodcastsTopResults.vue
assets/src/fonts/: fira-sans-condensed-v2-latin-700italic.eot
assets/src/js/: logic.js
assets/src/scss/: _borders-responsive.scss  _dark-mode.scss  main.scss
frontend/: gulpfile.js  index.html  package.json  webpack.config.js
frontend/src/: App.vue  app.js  filters.js  main.js  template.html
frontend/src/api/: index.js
frontend/src/components/: AddFeedFromUpload.vue  AddFeedProcessedUrl.vue  AddFeeds.vue  ApplePodcastsSearch.vue  ApplePodcastsSearchItem.vue  ApplePodcastsToplist.vue  Backdrop.vue  EpisodeDetail.vue  EpisodeDetailModal.vue  EpisodeList.vue  EpisodeListItem.vue  Home.vue  InfiniteNoMore.vue  Login.vue  Main.vue  PodcastDetail.vue  PodcastListItem.vue  ResetPassword.vue  Spinner.vue  WebPlayer.vue
frontend/src/interceptors/: index.js
frontend/src/mixins/: index.js
frontend/src/router/: index.js
frontend/src/scss/: _fonts.scss  _spinkit.scss  main.scss
hack/docker/: docker-compose.yml
listeners/: models.py  serializers.py
listeners/migrations/: 0001_initial.py
locale/de/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
podcastarchive/: celery.py  context_processors.py  settings.py  urls.py  wsgi.py
podcastarchive/users/: middleware.py  models.py  serializers.py
podcastarchive/users/migrations/: 0002_auto_20180502_1736.py  0003_create_initial_superuser.py  0004_auto_20190818_1115.py
podcasts/: __init__.py  admin.py  api.py  apps.py  conf.py  enums.py  forms.py  models.py  old_api.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  validators.py  views.py
podcasts/api/: pagination.py  serializers.py  views.py
podcasts/management/commands/: dbconnection.py  initadmin.py  refresh_feeds.py
podcasts/migrations/: 0001_initial.py  0002_episode_image.py  0002_podcast_fetched.py  0002_switch_to_utf8mb4_columns.py  0003_auto_20180509_1410.py  0003_auto_20180526_2127.py  0003_auto_20190901_1334.py  0004_auto_20180509_2341.py  0004_auto_20190902_1938.py  0004_listener_dark_mode.py  0005_auto_20180510_1654.py  0005_auto_20190902_1957.py  0005_episode_shownotes.py  0006_auto_20180513_0033.py  0006_auto_20190902_2002.py  0006_listener_image_security_policy.py  0007_auto_20180617_2355.py  0007_episode_download_task.py  0008_auto_20180514_0814.py  0008_auto_20181227_1639.py  0009_auto_20180515_2300.py  0010_auto_20180515_2322.py  0011_auto_20180516_1945.py  0012_auto_20180516_2039.py  0013_podcast_added.py  0014_auto_20180521_2335.py
podcasts/models/: __init__.py  common.py  episode.py  episode_chapter.py  fields.py  listener.py  podcast.py
podcasts/templates/: _activity_action_row.html  _episode_details_body.html  _episode_details_modal.html  _episode_details_modal_jsrender.html  _episode_download_failure_modal.html  _episode_listgroupitem.html  _per_podcast_attributes.html  _per_podcast_controls.html  _per_podcast_summary.html  _podcast_card.html  _podcast_card_discovery.html  _podcast_card_search_jqt.html  _podcast_card_search_modal.html  _settings_form_section.html  activity-list.html  podcasts-details.html  podcasts-discover.html  podcasts-list.html  podcasts-new.html  podcasts-settings.html
podcasts/templates/podcasts/: _field_help_long.html  _settings_form_submitter.html  podcast_check_delete.html
podcasts/templatetags/: podcasts_tags.py
podcasts/tests/: test_models.py  test_utils.py  test_views.py
podcasts/tests/cassettes/: test_episode_model.yaml  test_invalid_feed[0-None-Not Found].yaml  test_invalid_feed[1-None-Feed is malformatted].yaml  test_invalid_feed[1-None-Not Found].yaml  test_invalid_feed[2-None-Feed is malformatted].yaml  test_long_subtitle_feed.yaml  test_paged_feed.yaml  test_podcast_model.yaml  test_podcast_with_paged_feed.yaml  test_valid_feed.yaml
podcasts/tests/fixtures/: invalid.xml  paged_p1.xml  paged_p2.xml  subtitle_too_long.xml
podcasts/utils/: __init__.py  filters.py  properties.py  sanitizers.py  serializers.py
podcasts/utils/parsers/: feed_content.py
tapedrive/: settings.py  urls.py  wsgi.py
templates/: _messages.html  _navbar.html  _pagination.html  bare.html  base.html
templates/registration/: logged_out.html  login.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
