[tool.poetry]
name = "tapedrive"
version = "0.1.0"
description = "The selfhosted Podcast Archive"
authors = ["Jan Willhaus <mail@janwillhaus.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
Django = "~2.0"
django-activity-stream = "^0.7.0"
django-background-tasks = "^1.2"
django-bootstrap4 = "^0.0.8"
django-configurations = "^2.1"
bleach = "^3.1"
feedparser = "^5.2"
beautifulsoup4 = "^4.7"
dj-database-url = "^0.5.0"
langcodes = "^1.4"
Markdown = "^3.1"
Pillow = "^6.0"
requests = "^2.21"
python-dateutil = "^2.8"
psycopg2-binary = "^2.8"
mysqlclient = "^1.4"
djangorestframework = "^3.9"
html5lib = "^1.0"

[tool.poetry.dev-dependencies]
black = {version = "*",allows-prereleases = true}
django-debug-toolbar = "^1.11"
django-extensions = "^2.1"
django-livereload-server = "^0.3.2"
flake8 = "^3.7"
flake8-bugbear = "^19.3"
flake8-eradicate = "^0.2.0"
flake8_formatter_junit_xml = "^0.0.6"
pytest = "^4.4"
pytest-cov = "^2.7"
pytest-django = "^3.4"
pytest-mock = "^1.10"
pytest-vcr = "^1.0"
Werkzeug = "^0.15.2"
coveralls = "^1.7"

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.tx
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | staticfiles
  | templates
  | assets
  | locale
  | node_modules
  | migrations
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
